--- a/pom.xml
+++ b/pom.xml
@@ -148,22 +148,22 @@
                 </plugin>
 		
 		<plugin>
-      <groupId>com.hello2morrow.sonargraph</groupId>
-      <artifactId>maven-sonargraph-plugin</artifactId>
-      <version>7.2.0</version>
-      <configuration>
-       <!-- configuration properties are described below - 
-
-           none is mandatory -->
-      </configuration>
-      <executions>
-        <execution>
-          <goals>
-            <goal>architect-report-verify</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
+        <groupId>com.hello2morrow.sonargraph</groupId>
+        <artifactId>maven-sonargraph-plugin</artifactId>
+        <version>7.2.0</version>
+        <configuration>
+          <useSonargraphWorkspace>true</useSonargraphWorkspace>
+          <file>System.sonargraph</file>
+        </configuration>
+        
+        <executions>
+          <execution>
+            <goals>
+              <goal>architect-report-verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 		</plugins>
     </build>
 
