--- a/pom.xml
+++ b/pom.xml
@@ -148,22 +148,41 @@
                 </plugin>
 		
 		<plugin>
-        <groupId>com.hello2morrow.sonargraph</groupId>
-        <artifactId>maven-sonargraph-plugin</artifactId>
-        <version>9.12.3</version>
-        <configuration>
-          <useSonargraphWorkspace>true</useSonargraphWorkspace>
-          <file>System.sonargraph</file>
-        </configuration>
-        
-        <executions>
-          <execution>
-            <goals>
-              <goal>architect-report-verify</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+            <groupId>com.hello2morrow</groupId>
+            <artifactId>sonargraph-maven-plugin</artifactId>
+            <version>9.12.3</version>
+            <configuration>
+                <systemDirectory>${basedir}/crm-domain-example.sonargraph</systemDirectory>
+                <activationCode>...</activationCode>
+                <autoUpdate>true</autoUpdate>
+                <failSet>
+                    <failOnEmptyWorkspace>true</failOnEmptyWorkspace>
+                    <includes>
+                        <include>
+                            <issueType>ArchitectureViolation</issueType>
+                        </include>
+                        <include>
+                            <issueType>any</issueType>
+                            <severity>error</severity>
+                        </include>
+                    </includes>
+                    <excludes>
+                        <exclude>
+                            <issueType>ScriptCompilationError</issueType>
+                            <resolution>none</resolution>
+                        </exclude>
+                    </excludes>
+                </failSet>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>create-report</goal>
+                        <goal>dynamic-report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 		</plugins>
     </build>
 
