--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+	    <!-- https://mvnrepository.com/artifact/org.jenkins-ci.tools/maven-hpi-plugin -->
+<dependency>
+    <groupId>org.jenkins-ci.tools</groupId>
+    <artifactId>maven-hpi-plugin</artifactId>
+    <version>1.120</version>
+</dependency>
+
 
     </dependencies>
 	<distributionManagement>
